Fix for aligning images

--- a/src/css/sass/modules/product-callout.scss
+++ b/src/css/sass/modules/product-callout.scss
@@ -33,7 +33,7 @@ html {
           .foreground {
             width: 29vw;
             right: 22vw;
-            top: -3vw;
+            top: -14vw;
           }
           .background {
             margin-left: 0px;
