--- a/src/css/sass/style.css
+++ b/src/css/sass/style.css
@@ -274,7 +274,7 @@ html body .product-callout {
         html body .product-callout .product-images .foreground {
           width: 29vw;
           right: 22vw;
-          top: -3vw; }
+          top: -14vw; }
         html body .product-callout .product-images .background {
           margin-left: 0px;
           width: 60vw; } }
